NEXT-5139 - Fix preview label image alignment

--- a/src/Storefront/Resources/src/style/component/_filter-panel.scss
+++ b/src/Storefront/Resources/src/style/component/_filter-panel.scss
@@ -86,6 +86,7 @@ This file contains the generic styling for all filter items.
     margin-right: 8px;
     background-position: center center;
     background-size: cover;
+    vertical-align: text-bottom;
 }
 
 .filter-active-remove {
